iai-callgrind/tests/ui/test_main_invalid_callgrind_args.stderr
error: no rules expected the token `"some_func"`
  --> tests/ui/test_main_invalid_callgrind_args.rs:15:42
   |
15 |     main!(callgrind_args = ; functions = "some_func");
   |                                          ^^^^^^^^^^^ no rules expected this token in macro call

error: no rules expected the token `::`
  --> tests/ui/test_main_invalid_callgrind_args.rs:23:48
   |
23 |     main!(callgrind_args = ; functions = my_mod::some_func);
   |                                                ^^ no rules expected this token in macro call

error[E0423]: expected function, found module `super::my_mod`
  --> tests/ui/test_main_invalid_callgrind_args.rs:10:5
   |
10 |     main!(callgrind_args = ; functions = my_mod);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not a function
   |
   = note: this error originates in the macro `main` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/ui/test_main_invalid_callgrind_args.rs:4:28
  |
4 |     main!(callgrind_args = 1; functions = some_func);
  |                            ^ expected `&str`, found integer
